--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-chartjs-2": "^2.7.4",
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.8.1",
+    "react-html-table-to-excel": "^2.0.0",
     "react-js-pagination": "^3.0.2",
     "react-jsx-highcharts": "^3.4.0",
     "react-redux": "^5.0.7",
